Remove intro module
Tag: #Refactor

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,1 @@
-include ':app', ':iconanim', ':idling', ':safedialog', ':extension', ':intro'
+include ':app', ':iconanim', ':idling', ':safedialog', ':extension'
