Add parentFragment and remove deprecated fragmentManager
Tag: #New #Refactor

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -70,6 +70,7 @@ dependencies {
     implementation project(":safedialog")
     implementation project(":extension")
 
+    //On generate signed bundle/apk need remove all func calls and imports
     debugImplementation project(":idling")
 
     //region Kotlin
