--- a/app/build.gradle
+++ b/app/build.gradle
@@ -116,6 +116,8 @@ dependencies {
     androidTestImplementation androidx.test.espresso.core
     androidTestImplementation androidx.test.espresso.contrib
 
+    androidTestImplementation jetbrains.coroutines.test
+
     testImplementation powermock.module
     testImplementation powermock.rule
     testImplementation powermock.api
