--- a/values.gradle
+++ b/values.gradle
@@ -10,7 +10,8 @@ ext {
             kotlin    : "org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.3.50",
             coroutines: [
                     core   : "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.2",
-                    android: "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.2"
+                    android: "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.2",
+                    test: "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.3.2"
             ]
     ]
 
