--- a/app/build.gradle
+++ b/app/build.gradle
@@ -85,6 +85,8 @@ dependencies {
 
     //region AndroidX
 
+    implementation "androidx.preference:preference-ktx:1.1.0"
+
     implementation androidx.lifecycle.extensions
     implementation androidx.lifecycle.viewmodel
     kapt androidx.lifecycle.compiler
