Add dagger implementation
Tag: #New

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -83,6 +83,9 @@ dependencies {
 
     implementation google.material
 
+    implementation google.dagger.core
+    kapt google.dagger.compiler
+
     //region AndroidX
 
     implementation androidx.lifecycle.extensions
