--- a/values.gradle
+++ b/values.gradle
@@ -16,7 +16,11 @@ ext {
     ]
 
     google = [
-            material: "com.google.android.material:material:1.0.0"
+            material: "com.google.android.material:material:1.0.0",
+            dagger  : [
+                    core    : "com.google.dagger:dagger:2.25.4",
+                    compiler: "com.google.dagger:dagger-compiler:2.25.4"
+            ]
     ]
 
     androidx = [
