--- a/values.gradle
+++ b/values.gradle
@@ -7,11 +7,11 @@ ext {
     ]
 
     jetbrains = [
-            kotlin    : "org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.3.50",
+            kotlin    : "org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.3.61",
             coroutines: [
-                    core   : "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.2",
-                    android: "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.2",
-                    test: "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.3.2"
+                    core   : "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.3",
+                    android: "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.3",
+                    test: "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.3.3"
             ]
     ]
 
@@ -25,15 +25,15 @@ ext {
 
     androidx = [
             lifecycle       : [
-                    extensions: "androidx.lifecycle:lifecycle-extensions:2.2.0-beta01",
-                    viewmodel : "androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0-beta01",
-                    compiler  : "androidx.lifecycle:lifecycle-compiler:2.2.0-beta01",
+                    extensions: "androidx.lifecycle:lifecycle-extensions:2.2.0",
+                    viewmodel : "androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0",
+                    compiler  : "androidx.lifecycle:lifecycle-compiler:2.2.0",
             ],
             room            : [
-                    runtime : "androidx.room:room-runtime:2.2.0",
-                    ktx     : "androidx.room:room-ktx:2.2.0",
-                    compiler: "androidx.room:room-compiler:2.2.0",
-                    testing : "androidx.room:room-testing:2.2.0"
+                    runtime : "androidx.room:room-runtime:2.2.3",
+                    ktx     : "androidx.room:room-ktx:2.2.3",
+                    compiler: "androidx.room:room-compiler:2.2.3",
+                    testing : "androidx.room:room-testing:2.2.3"
             ],
             preference      : "androidx.preference:preference-ktx:1.1.0",
             appcompat       : "androidx.appcompat:appcompat:1.1.0",
@@ -61,7 +61,7 @@ ext {
     ]
 
     junit = [
-            core: "junit:junit:4.12"
+            core: "junit:junit:4.13"
     ]
 
     mockk = [
