--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,9 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.3.61'
+    ext.gradle_ver = "3.6.1"
+    ext.dokka_ver = "0.9.18"
+    ext.kotlin_ver = '1.3.70'
 
     repositories {
         google()
@@ -10,10 +12,10 @@ buildscript {
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.6.0'
+        classpath "com.android.tools.build:gradle:$gradle_ver"
 
-        classpath "org.jetbrains.dokka:dokka-android-gradle-plugin:0.9.18"
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath "org.jetbrains.dokka:dokka-android-gradle-plugin:$dokka_ver"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_ver"
     }
 }
 
