--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
         package="sgtmelon.scriptum">
 
     <uses-permission android:name="android.permission.WAKE_LOCK"/>
@@ -79,7 +80,8 @@
                 android:name=".screen.ui.notification.AlarmActivity"
                 android:configChanges="keyboardHidden|orientation|screenSize"
                 android:parentActivityName=".screen.ui.main.MainActivity"
-                android:screenOrientation="portrait">
+                android:screenOrientation="portrait"
+                tools:ignore="LockedOrientationActivity">
             <intent-filter>
                 <action android:name="android.intent.action.VIEW"/>
                 <category android:name="android.intent.category.DEFAULT"/>
@@ -97,8 +99,8 @@
             </intent-filter>
         </activity>
 
-        <receiver android:name=".receiver.UnbindReceiver"/>
-        <receiver android:name=".receiver.AlarmReceiver"/>
+        <receiver android:name="sgtmelon.scriptum.presentation.receiver.UnbindReceiver"/>
+        <receiver android:name="sgtmelon.scriptum.presentation.receiver.AlarmReceiver"/>
 
     </application>
 
