--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.gradle_ver = "3.6.1"
+    ext.gradle_ver = '4.0.0'
     ext.dokka_ver = "0.9.18"
     ext.kotlin_ver = '1.3.70'
 
