Fix openState and drag + add/fix tests
Tag: #New #Test #Refactor

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,14 +53,14 @@ android {
 
     buildTypes {
         release {
-            minifyEnabled false
+            minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
 
             buildConfigField "int", "INPUT_CONTROL_MAX_SIZE", '200'
         }
 
         debug {
-            minifyEnabled false
+            minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
             testProguardFile 'proguard-test-rules.pro'
 
