--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,7 +14,7 @@ android {
         applicationId "sgtmelon.scriptum"
         minSdkVersion 16
         targetSdkVersion 29
-        versionCode 17
+        versionCode 18
         versionName git.version.windows.execute().text.trim()
 
         testInstrumentationRunner androidx.test.instrumentationRunner
@@ -31,6 +31,8 @@ android {
         buildConfigField "String", "MARKET_URL", '"market://details?id="'
         buildConfigField "String", "BROWSER_URL", '"https://play.google.com/sore/apps/details?id="'
         buildConfigField "String", "PRIVACY_POLICY_URL", '"https://drive.google.com/open?id=1f5tfXeBM6dxUqpsHW3SqMHa-mtKf5RSx"'
+
+//        multiDexEnabled true
     }
 
     testOptions {
