--- a/values.gradle
+++ b/values.gradle
@@ -24,6 +24,7 @@ ext {
     ]
 
     androidx = [
+            core            : "androidx.core:core-ktx:1.3.1",
             lifecycle       : [
                     extensions: "androidx.lifecycle:lifecycle-extensions:2.2.0",
                     viewmodel : "androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0",
