--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,108 +1,106 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
-        package="sgtmelon.scriptum">
+    package="sgtmelon.scriptum">
 
-    <uses-permission android:name="android.permission.WAKE_LOCK"/>
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
-    <uses-permission android:name="android.permission.VIBRATE"/>
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.VIBRATE" />
 
     <application
-            android:name="sgtmelon.scriptum.presentation.screen.ui.ScriptumApplication"
-            android:allowBackup="true"
-            android:fullBackupContent="@xml/backup_descriptor"
-            android:icon="@mipmap/ic_launcher"
-            android:label="@string/app_name"
-            android:roundIcon="@mipmap/ic_launcher_round"
-            android:supportsRtl="true"
-            android:theme="@style/App.Light.UI">
+        android:name="sgtmelon.scriptum.presentation.screen.ui.ScriptumApplication"
+        android:allowBackup="true"
+        android:fullBackupContent="@xml/backup_descriptor"
+        android:icon="@mipmap/ic_launcher"
+        android:label="@string/app_name"
+        android:roundIcon="@mipmap/ic_launcher_round"
+        android:supportsRtl="true"
+        android:theme="@style/App.Light.UI">
 
         <activity
-                android:name="sgtmelon.scriptum.presentation.screen.ui.impl.SplashActivity"
-                android:configChanges="keyboardHidden|orientation|screenSize"
-                android:theme="@style/App.Splash">
+            android:name="sgtmelon.scriptum.presentation.screen.ui.impl.SplashActivity"
+            android:configChanges="keyboardHidden|orientation|screenSize"
+            android:theme="@style/App.Splash">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
-                <category android:name="android.intent.category.LAUNCHER"/>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
 
         <activity
-                android:name="sgtmelon.scriptum.presentation.screen.ui.impl.intro.IntroActivity"
-                android:configChanges="keyboardHidden|orientation|screenSize"
-                android:parentActivityName="sgtmelon.scriptum.presentation.screen.ui.impl.SplashActivity"
-                android:theme="@style/App.Intro">
+            android:name="sgtmelon.scriptum.presentation.screen.ui.impl.intro.IntroActivity"
+            android:configChanges="keyboardHidden|orientation|screenSize"
+            android:parentActivityName="sgtmelon.scriptum.presentation.screen.ui.impl.SplashActivity"
+            android:theme="@style/App.Intro">
             <intent-filter>
-                <action android:name="android.intent.action.VIEW"/>
-                <category android:name="android.intent.category.DEFAULT"/>
+                <action android:name="android.intent.action.VIEW" />
+                <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
 
         <activity
-                android:name="sgtmelon.scriptum.presentation.screen.ui.impl.main.MainActivity"
-                android:windowSoftInputMode="adjustPan">
+            android:name="sgtmelon.scriptum.presentation.screen.ui.impl.main.MainActivity"
+            android:windowSoftInputMode="adjustPan">
             <intent-filter>
-                <action android:name="android.intent.action.VIEW"/>
-                <category android:name="android.intent.category.HOME"/>
+                <action android:name="android.intent.action.VIEW" />
+                <category android:name="android.intent.category.HOME" />
             </intent-filter>
         </activity>
 
         <activity
-                android:name="sgtmelon.scriptum.presentation.screen.ui.impl.note.NoteActivity"
-                android:parentActivityName="sgtmelon.scriptum.presentation.screen.ui.impl.main.MainActivity">
+            android:name="sgtmelon.scriptum.presentation.screen.ui.impl.note.NoteActivity"
+            android:parentActivityName="sgtmelon.scriptum.presentation.screen.ui.impl.main.MainActivity">
             <intent-filter>
-                <action android:name="android.intent.action.EDIT"/>
-                <category android:name="android.intent.category.DEFAULT"/>
+                <action android:name="android.intent.action.EDIT" />
+                <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
 
         <activity
-                android:name="sgtmelon.scriptum.presentation.screen.ui.impl.preference.PreferenceActivity"
-                android:configChanges="keyboardHidden"
-                android:parentActivityName="sgtmelon.scriptum.presentation.screen.ui.impl.main.MainActivity">
+            android:name="sgtmelon.scriptum.presentation.screen.ui.impl.preference.PreferenceActivity"
+            android:configChanges="keyboardHidden"
+            android:parentActivityName="sgtmelon.scriptum.presentation.screen.ui.impl.main.MainActivity">
             <intent-filter>
-                <action android:name="android.intent.action.VIEW"/>
-                <category android:name="android.intent.category.DEFAULT"/>
+                <action android:name="android.intent.action.VIEW" />
+                <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
 
         <activity
-                android:name="sgtmelon.scriptum.presentation.screen.ui.impl.notification.NotificationActivity"
-                android:configChanges="keyboardHidden"
-                android:parentActivityName="sgtmelon.scriptum.presentation.screen.ui.impl.main.MainActivity">
+            android:name="sgtmelon.scriptum.presentation.screen.ui.impl.notification.NotificationActivity"
+            android:configChanges="keyboardHidden"
+            android:parentActivityName="sgtmelon.scriptum.presentation.screen.ui.impl.main.MainActivity">
             <intent-filter>
-                <action android:name="android.intent.action.VIEW"/>
-                <category android:name="android.intent.category.DEFAULT"/>
+                <action android:name="android.intent.action.VIEW" />
+                <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
 
         <activity
-                android:name="sgtmelon.scriptum.presentation.screen.ui.impl.notification.AlarmActivity"
-                android:configChanges="keyboardHidden|orientation|screenSize"
-                android:parentActivityName="sgtmelon.scriptum.presentation.screen.ui.impl.main.MainActivity"
-                android:screenOrientation="portrait"
-                tools:ignore="LockedOrientationActivity">
+            android:name="sgtmelon.scriptum.presentation.screen.ui.impl.notification.AlarmActivity"
+            android:configChanges="keyboardHidden|orientation|screenSize"
+            android:parentActivityName="sgtmelon.scriptum.presentation.screen.ui.impl.main.MainActivity"
+            android:screenOrientation="portrait">
             <intent-filter>
-                <action android:name="android.intent.action.VIEW"/>
-                <category android:name="android.intent.category.DEFAULT"/>
+                <action android:name="android.intent.action.VIEW" />
+                <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
 
         <activity
-                android:name="sgtmelon.scriptum.presentation.screen.ui.impl.DevelopActivity"
-                android:configChanges="keyboardHidden"
-                android:parentActivityName="sgtmelon.scriptum.presentation.screen.ui.impl.preference.PreferenceActivity">
+            android:name="sgtmelon.scriptum.presentation.screen.ui.impl.DevelopActivity"
+            android:configChanges="keyboardHidden"
+            android:parentActivityName="sgtmelon.scriptum.presentation.screen.ui.impl.preference.PreferenceActivity">
             <intent-filter>
-                <action android:name="android.intent.action.VIEW"/>
-                <category android:name="android.intent.category.DEFAULT"/>
+                <action android:name="android.intent.action.VIEW" />
+                <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
 
-        <receiver android:name="sgtmelon.scriptum.presentation.receiver.AlarmReceiver"/>
-        <receiver android:name="sgtmelon.scriptum.presentation.receiver.MainReceiver"/>
-        <receiver android:name="sgtmelon.scriptum.presentation.receiver.NoteReceiver"/>
-        <receiver android:name="sgtmelon.scriptum.presentation.receiver.UnbindReceiver"/>
+        <receiver android:name="sgtmelon.scriptum.presentation.receiver.AlarmReceiver" />
+        <receiver android:name="sgtmelon.scriptum.presentation.receiver.MainReceiver" />
+        <receiver android:name="sgtmelon.scriptum.presentation.receiver.NoteReceiver" />
+        <receiver android:name="sgtmelon.scriptum.presentation.receiver.UnbindReceiver" />
 
     </application>
 
