--- a/app/build.gradle
+++ b/app/build.gradle
@@ -119,6 +119,8 @@ dependencies {
 
     //region Testing
 
+    debugImplementation other.leakcanary
+
     androidTestImplementation androidx.test.runner
     androidTestImplementation androidx.test.rules
     androidTestImplementation androidx.test.junit
