--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,19 +8,19 @@
     <uses-permission android:name="android.permission.VIBRATE" />
 
     <application
-        android:name="sgtmelon.scriptum.presentation.screen.ui.ScriptumApplication"
+        android:name=".presentation.screen.ui.ScriptumApplication"
         android:allowBackup="true"
         android:fullBackupContent="@xml/backup_descriptor"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/App.Light.UI">
+        android:theme="@style/App.Screen.DayNight">
 
         <activity
-            android:name="sgtmelon.scriptum.presentation.screen.ui.impl.SplashActivity"
+            android:name=".presentation.screen.ui.impl.SplashActivity"
             android:configChanges="keyboardHidden|orientation|screenSize"
-            android:theme="@style/App.Splash">
+            android:theme="@style/App.Screen.Splash">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
@@ -28,10 +28,10 @@
         </activity>
 
         <activity
-            android:name="sgtmelon.scriptum.presentation.screen.ui.impl.intro.IntroActivity"
+            android:name=".presentation.screen.ui.impl.intro.IntroActivity"
             android:configChanges="keyboardHidden"
-            android:parentActivityName="sgtmelon.scriptum.presentation.screen.ui.impl.SplashActivity"
-            android:theme="@style/App.Intro">
+            android:parentActivityName=".presentation.screen.ui.impl.SplashActivity"
+            android:theme="@style/App.Screen.Intro">
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
                 <category android:name="android.intent.category.DEFAULT" />
@@ -39,7 +39,7 @@
         </activity>
 
         <activity
-            android:name="sgtmelon.scriptum.presentation.screen.ui.impl.main.MainActivity"
+            android:name=".presentation.screen.ui.impl.main.MainActivity"
             android:windowSoftInputMode="adjustPan">
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
@@ -48,8 +48,8 @@
         </activity>
 
         <activity
-            android:name="sgtmelon.scriptum.presentation.screen.ui.impl.note.NoteActivity"
-            android:parentActivityName="sgtmelon.scriptum.presentation.screen.ui.impl.main.MainActivity">
+            android:name=".presentation.screen.ui.impl.note.NoteActivity"
+            android:parentActivityName=".presentation.screen.ui.impl.main.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.EDIT" />
                 <category android:name="android.intent.category.DEFAULT" />
@@ -57,9 +57,9 @@
         </activity>
 
         <activity
-            android:name="sgtmelon.scriptum.presentation.screen.ui.impl.preference.PreferenceActivity"
+            android:name=".presentation.screen.ui.impl.preference.PreferenceActivity"
             android:configChanges="keyboardHidden"
-            android:parentActivityName="sgtmelon.scriptum.presentation.screen.ui.impl.main.MainActivity">
+            android:parentActivityName=".presentation.screen.ui.impl.main.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
                 <category android:name="android.intent.category.DEFAULT" />
@@ -67,9 +67,9 @@
         </activity>
 
         <activity
-            android:name="sgtmelon.scriptum.presentation.screen.ui.impl.notification.NotificationActivity"
+            android:name=".presentation.screen.ui.impl.notification.NotificationActivity"
             android:configChanges="keyboardHidden"
-            android:parentActivityName="sgtmelon.scriptum.presentation.screen.ui.impl.main.MainActivity">
+            android:parentActivityName=".presentation.screen.ui.impl.main.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
                 <category android:name="android.intent.category.DEFAULT" />
@@ -77,9 +77,9 @@
         </activity>
 
         <activity
-            android:name="sgtmelon.scriptum.presentation.screen.ui.impl.notification.AlarmActivity"
+            android:name=".presentation.screen.ui.impl.notification.AlarmActivity"
             android:configChanges="keyboardHidden"
-            android:parentActivityName="sgtmelon.scriptum.presentation.screen.ui.impl.main.MainActivity"
+            android:parentActivityName=".presentation.screen.ui.impl.main.MainActivity"
             android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
@@ -88,19 +88,19 @@
         </activity>
 
         <activity
-            android:name="sgtmelon.scriptum.presentation.screen.ui.impl.DevelopActivity"
+            android:name=".presentation.screen.ui.impl.DevelopActivity"
             android:configChanges="keyboardHidden"
-            android:parentActivityName="sgtmelon.scriptum.presentation.screen.ui.impl.preference.PreferenceActivity">
+            android:parentActivityName=".presentation.screen.ui.impl.preference.PreferenceActivity">
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
 
-        <receiver android:name="sgtmelon.scriptum.presentation.receiver.AlarmReceiver" />
-        <receiver android:name="sgtmelon.scriptum.presentation.receiver.MainReceiver" />
-        <receiver android:name="sgtmelon.scriptum.presentation.receiver.NoteReceiver" />
-        <receiver android:name="sgtmelon.scriptum.presentation.receiver.UnbindReceiver" />
+        <receiver android:name=".presentation.receiver.AlarmReceiver" />
+        <receiver android:name=".presentation.receiver.MainReceiver" />
+        <receiver android:name=".presentation.receiver.NoteReceiver" />
+        <receiver android:name=".presentation.receiver.UnbindReceiver" />
 
     </application>
 
