Refactor BindErrorTest.kt with UiAutomator

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -125,6 +125,7 @@ dependencies {
     debugImplementation androidx.test.espresso.idling
     androidTestImplementation androidx.test.espresso.core
     androidTestImplementation androidx.test.espresso.contrib
+    androidTestImplementation androidx.test.uiautomator
 
     debugImplementation junit.core
     debugImplementation jetbrains.coroutines.test
