--- a/values.gradle
+++ b/values.gradle
@@ -11,7 +11,7 @@ ext {
             coroutines: [
                     core   : "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.3",
                     android: "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.3",
-                    test: "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.3.3"
+                    test   : "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.3.3"
             ]
     ]
 
@@ -53,7 +53,8 @@ ext {
                             idling : "androidx.test.espresso:espresso-idling-resource:3.2.0",
                             core   : "androidx.test.espresso:espresso-core:3.2.0",
                             contrib: "androidx.test.espresso:espresso-contrib:3.2.0"
-                    ]
+                    ],
+                    uiautomator          : "androidx.test.uiautomator:uiautomator:2.2.0"
             ]
     ]
 
