--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -67,6 +67,16 @@
         </activity>
 
         <activity
+            android:name=".presentation.screen.ui.impl.preference.DevelopActivity"
+            android:configChanges="keyboardHidden"
+            android:parentActivityName=".presentation.screen.ui.impl.preference.PreferenceActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
+
+        <activity
             android:name=".presentation.screen.ui.impl.notification.NotificationActivity"
             android:configChanges="keyboardHidden"
             android:parentActivityName=".presentation.screen.ui.impl.main.MainActivity">
@@ -81,16 +91,6 @@
             android:configChanges="keyboardHidden"
             android:parentActivityName=".presentation.screen.ui.impl.main.MainActivity"
             android:screenOrientation="portrait">
-            <intent-filter>
-                <action android:name="android.intent.action.VIEW" />
-                <category android:name="android.intent.category.DEFAULT" />
-            </intent-filter>
-        </activity>
-
-        <activity
-            android:name=".presentation.screen.ui.impl.DevelopActivity"
-            android:configChanges="keyboardHidden"
-            android:parentActivityName=".presentation.screen.ui.impl.preference.PreferenceActivity">
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
                 <category android:name="android.intent.category.DEFAULT" />
