--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -77,6 +77,16 @@
         </activity>
 
         <activity
+            android:name=".presentation.screen.ui.impl.preference.PrintActivity"
+            android:configChanges="keyboardHidden"
+            android:parentActivityName=".presentation.screen.ui.impl.preference.DevelopActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
+
+        <activity
             android:name=".presentation.screen.ui.impl.notification.NotificationActivity"
             android:configChanges="keyboardHidden"
             android:parentActivityName=".presentation.screen.ui.impl.main.MainActivity">
