--- a/values.gradle
+++ b/values.gradle
@@ -16,7 +16,7 @@ ext {
     ]
 
     google = [
-            firebase : [
+            firebase: [
                     analytics  : "com.google.firebase:firebase-analytics-ktx:18.0.2",
                     crashlytics: "com.google.firebase:firebase-crashlytics-ktx:17.4.1"
             ],
@@ -50,6 +50,7 @@ ext {
             ],
             test            : [
                     instrumentationRunner: "androidx.test.runner.AndroidJUnitRunner",
+                    core                 : "androidx.test:core-ktx:1.3.0",
                     runner               : "androidx.test:runner:1.3.0",
                     rules                : "androidx.test:rules:1.3.0",
                     junit                : "androidx.test.ext:junit:1.1.2",
