Add BootReceiver.kt which open EternalService.kt after device restart

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="sgtmelon.scriptum">
 
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
     <uses-permission android:name="android.permission.WAKE_LOCK" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
@@ -113,6 +114,14 @@
         <receiver android:name=".presentation.receiver.MainReceiver" />
         <receiver android:name=".presentation.receiver.NoteReceiver" />
         <receiver android:name=".presentation.receiver.UnbindReceiver" />
+
+        <receiver
+            android:name=".presentation.receiver.BootReceiver"
+            android:enabled="true">
+            <intent-filter>
+                <action android:name="android.intent.action.BOOT_COMPLETED" />
+            </intent-filter>
+        </receiver>
 
         <service
             android:name=".presentation.service.EternalService"
