Move backup preferences to another screen

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -70,7 +70,7 @@
         </activity>
 
         <activity
-            android:name=".presentation.screen.ui.impl.preference.DevelopActivity"
+            android:name=".presentation.screen.ui.impl.preference.BackupActivity"
             android:configChanges="keyboardHidden"
             android:parentActivityName=".presentation.screen.ui.impl.preference.PreferenceActivity">
             <intent-filter>
@@ -80,9 +80,19 @@
         </activity>
 
         <activity
-            android:name=".presentation.screen.ui.impl.preference.PrintActivity"
+            android:name=".presentation.screen.ui.impl.preference.develop.DevelopActivity"
             android:configChanges="keyboardHidden"
-            android:parentActivityName=".presentation.screen.ui.impl.preference.DevelopActivity">
+            android:parentActivityName=".presentation.screen.ui.impl.preference.PreferenceActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
+
+        <activity
+            android:name=".presentation.screen.ui.impl.preference.develop.PrintActivity"
+            android:configChanges="keyboardHidden"
+            android:parentActivityName=".presentation.screen.ui.impl.preference.develop.DevelopActivity">
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
                 <category android:name="android.intent.category.DEFAULT" />
