--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -90,6 +90,16 @@
         </activity>
 
         <activity
+            android:name=".presentation.screen.ui.impl.preference.AlarmPrefActivity"
+            android:configChanges="keyboardHidden"
+            android:parentActivityName=".presentation.screen.ui.impl.preference.PreferenceActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
+
+        <activity
             android:name=".presentation.screen.ui.impl.preference.develop.DevelopActivity"
             android:configChanges="keyboardHidden"
             android:parentActivityName=".presentation.screen.ui.impl.preference.PreferenceActivity">
