--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -147,9 +147,13 @@
         </activity>
 
         <receiver android:name=".presentation.receiver.action.AlarmActionReceiver" />
+        <receiver android:name=".presentation.receiver.action.UnbindActionReceiver" />
+
+        <receiver android:name=".presentation.receiver.screen.DevelopScreenReceiver" />
         <receiver android:name=".presentation.receiver.screen.MainScreenReceiver" />
         <receiver android:name=".presentation.receiver.screen.NoteScreenReceiver" />
-        <receiver android:name=".presentation.receiver.action.UnbindActionReceiver" />
+
+        <receiver android:name=".presentation.receiver.EternalReceiver" />
 
         <receiver
             android:name=".presentation.receiver.BootReceiver"
