--- a/values.gradle
+++ b/values.gradle
@@ -44,6 +44,7 @@ ext {
             appcompat       : "androidx.appcompat:appcompat:1.2.0",
             cardview        : "androidx.cardview:cardview:1.0.0 ",
             constraintlayout: "androidx.constraintlayout:constraintlayout:2.0.4",
+            viewpager       : "androidx.viewpager2:viewpager2:1.0.0",
             vector          : [
                     drawable: "androidx.vectordrawable:vectordrawable:1.1.0",
                     animated: "androidx.vectordrawable:vectordrawable-animated:1.1.0"
@@ -64,7 +65,7 @@ ext {
     ]
 
     other = [
-            pageindicator: "com.romandanylyk:pageindicatorview:1.0.1",
+            pageindicator: "ru.tinkoff.scrollingpagerindicator:scrollingpagerindicator:1.2.1",
             leakcanary   : "com.squareup.leakcanary:leakcanary-android:2.6"
     ]
 
